ready for chinese substitution

--- a/html/about.html
+++ b/html/about.html
@@ -237,7 +237,7 @@
     <div class="col-lg-4 col-sm-12 col-xs-12">
       <h1 class="title">The Largerst<br>
         Student-run Sino-US Conference<br>
-        in US</h1>
+        in the U.S.</h1>
     </div>
     <div class="col-lg-8 col-sm-12 hidden-xs">
       <div class="row">
