--- a/html/panels.html
+++ b/html/panels.html
@@ -278,6 +278,7 @@
                 <p>With continuous regulatory changes, constant technological industry disruptions, and rising valuations across major asset classes, how can investors prepare themselves to capitalize on the new wave of opportunities in China? What role should China play in the next generation of Globalization?</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Annenberg Center</p>
                 <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 15th, 10:00am - 12:00am</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
               </div>
             </div>
           </div>
@@ -290,7 +291,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-6 center-txt speaker-item">
+              <!-- <div class="col-6 center-txt speaker-item">
                 <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
                 <div class="speaker-name">Tiankai Cui</div>
                 <div class="speaker-title">Chinese Ambassador</div>
@@ -309,6 +310,9 @@
                 <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
                 <div class="speaker-name">Lei Jun</div>
                 <div class="speaker-title">CEO of XiaoMi</div>
+              </div> -->
+              <div class="col-12 center-txt">
+                <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
               </div>
             </div>
           </div>
@@ -325,7 +329,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-6 center-txt speaker-item">
+              <!-- <div class="col-6 center-txt speaker-item">
                 <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
                 <div class="speaker-name">Tiankai Cui</div>
                 <div class="speaker-title">Chinese Ambassador</div>
@@ -344,6 +348,9 @@
                 <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
                 <div class="speaker-name">Lei Jun</div>
                 <div class="speaker-title">CEO of XiaoMi</div>
+              </div> -->
+              <div class="col-12 center-txt">
+                <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
               </div>
             </div>
           </div>
@@ -361,6 +368,7 @@
                 <p>The conference will focus on the influence cast on the traditional industries by emerging industries that are fuelled by technological innovation. At the same time, we will also explore the dynamics in between the technology firms within the innovation ecosystem. How will these new forces shape the trajectories of technology development in China and in the world? As college students, how should we leverage surrounding opportunities to make a dent in the universe?</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
                 <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 12:30pm - 14:30pm</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
               </div>
             </div>
           </div>
@@ -382,6 +390,7 @@
                 <p>In today's world, how do we make sense of the consensus between the two presidents and the significance of the Belt and Road initiative? From these significant summits and forums, many people, particularly the students, want to know what the takeaways are for them. What will be the impact of the Sino-US relationship on their lives? What can the 21st century students specifically contribute to help strengthen the two countries’ relationship?</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Annenberg Center</p>
                 <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 12:30pm - 14:30pm</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
               </div>
             </div>
           </div>
@@ -394,7 +403,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-6 center-txt speaker-item">
+              <!-- <div class="col-6 center-txt speaker-item">
                 <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
                 <div class="speaker-name">Tiankai Cui</div>
                 <div class="speaker-title">Chinese Ambassador</div>
@@ -413,6 +422,9 @@
                 <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
                 <div class="speaker-name">Lei Jun</div>
                 <div class="speaker-title">CEO of XiaoMi</div>
+              </div> -->
+              <div class="col-12 center-txt">
+                <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
               </div>
             </div>
           </div>
@@ -429,7 +441,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-6 center-txt speaker-item">
+              <!-- <div class="col-6 center-txt speaker-item">
                 <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
                 <div class="speaker-name">Tiankai Cui</div>
                 <div class="speaker-title">Chinese Ambassador</div>
@@ -448,6 +460,9 @@
                 <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
                 <div class="speaker-name">Lei Jun</div>
                 <div class="speaker-title">CEO of XiaoMi</div>
+              </div> -->
+              <div class="col-12 center-txt">
+                <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
               </div>
             </div>
           </div>
@@ -466,6 +481,7 @@
                 <p>In this pivotal moment of transformation, how should the traditional real estate industry adjust smoothly into this new era? How should companies adapt based on their unique characteristics instead of blindly following the trend? What attitude and expectations does the government have about this new mode? These topics and questions are what the real estate panel will ponder upon.</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
                 <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 12:30pm - 14:30pm</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
               </div>
             </div>
           </div>
@@ -488,6 +504,7 @@
                 <p>In the near future, will we be witnesses to a new age of Chinese entertainment? What would already-established figures say about current Chinese fashion and entertainment? How have industry changes influenced their lines of work? What are their opinions on the impact that an increasing influx of capital has on the industry? Moreover, what do they envision for the future of the industry? These questions will be answered at the Entertainment Panel of the Penn Wharton China Summit.</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
                 <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 10:00am - 12:00am</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
               </div>
             </div>
           </div>
@@ -500,7 +517,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-6 center-txt speaker-item">
+              <!-- <div class="col-6 center-txt speaker-item">
                 <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
                 <div class="speaker-name">Tiankai Cui</div>
                 <div class="speaker-title">Chinese Ambassador</div>
@@ -519,6 +536,9 @@
                 <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
                 <div class="speaker-name">Lei Jun</div>
                 <div class="speaker-title">CEO of XiaoMi</div>
+              </div> -->
+              <div class="col-12 center-txt">
+                <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
               </div>
             </div>
           </div>
@@ -535,7 +555,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-6 center-txt speaker-item">
+              <!-- <div class="col-6 center-txt speaker-item">
                 <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
                 <div class="speaker-name">Tiankai Cui</div>
                 <div class="speaker-title">Chinese Ambassador</div>
@@ -554,6 +574,9 @@
                 <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
                 <div class="speaker-name">Lei Jun</div>
                 <div class="speaker-title">CEO of XiaoMi</div>
+              </div> -->
+              <div class="col-12 center-txt">
+                <img src="../assets/images/speakers-tba.jpg" style="width:100%; max-height: 100%;"/>
               </div>
             </div>
           </div>
@@ -571,7 +594,9 @@
                 <p>Today, with the transformation of China's economic structure, many social problems have started to come about, and the implementation of the national 13th five-year plan and sustainable development goals faces many opportunities and challenges. With the efforts of all the explorers and practitioners, as well as the integration of business, media, science and technology, innovation and culture, China's philanthropic industry is developing in a positive way. For enterprises, the realization of social value is as important as that of the commercial value. The public welfare element can aid the construction of enterprise brand and culture, the promotion of social influence and the transformation of strategy. For public welfare institutions, the linkage of social resources is conducive to the improvement and solution of social problems. For government and media, focusing on social issues, promoting social development, and spreading the positive energy of society have always been needed.
                 </p>
                 <p>Therefore, our panel will invite outstanding entrepreneurs to discuss the status, problems, solutions and future prospects of sustainable development and social responsibility of Chinese enterprises. </p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp;April 14th, 3:00pm - 5:00pm</p>
+                <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 3:00pm - 5:00pm</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: English</p>
               </div>
             </div>
           </div>
