--- a/html/past.html
+++ b/html/past.html
@@ -273,13 +273,13 @@
       </div>
     </div>
 
-    <div class="row no-gutters white-bg">
+    <div class="row no-gutters white-bg row-eq-height">
       <div class="col-lg-6 col-sm-12 col-xs-12">
         <div id="redbox">
           <div class="row center-txt">
             <div class="summit-year">PWCS 2017</div>
           </div>
-          <div class="row">
+          <div class="row row-eq-height">
             <div class="col-4 speaker-name">Qiyue Zhang</div>
             <div class="col-8 speaker-title"> Consulate General of China in New York<br/></div>
             <div class="col-4 speaker-name">Shiyi Pan</div>
