--- a/html/speakers.html
+++ b/html/speakers.html
@@ -601,7 +601,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-6 col-sm-6 col-lg-3">
+                <!-- <div class="col-6 col-sm-6 col-lg-3">
                   <div class="image_container3">
                   </div>
                   <div class="caption">
@@ -648,7 +648,8 @@
                       Chinese Embassador
                     </div>
                   </div>
-                </div>
+                </div> -->
+                <img src="../assets/speakers-tba.jpg" width="100%">
               </div>
             </div>
           </div>
