--- a/html/past-ch.html
+++ b/html/past-ch.html
@@ -241,34 +241,20 @@
         <div class="col-lg-5 col-sm-12 col-xs-12">
           <h1 class="year-title">2017</h1>
           <h1 class="slogan-title">
-            <span>the World to China: </span>Challenges in Supply Side Reform<br>
-            <span>China to the World: </span>Integration in Globalization Strategy</h1>
+            <span>中国看世界: </span>全球化战略的整合<br>
+            <span>世界看中国: </span>供给侧改革的挑战</h1>
         </div>
         <div class="col-lg-7 col-sm-12 hidden-xs year-desc">
-          <p>The 2017 Summit aimed to build the
-            United States’ most influential exchange
-            platform for overseas elites by inviting
-            leaders from all walks of life to shed
-            light on the developmental prospects of
-            Chinese enterprises, and to divulge the
-            many opportunities as China found its
-            place on the global track.</p>
-          <p>We invited a number of distinguished guests
-              from all walks of life to converse with elite
-              Chinese and American students at the second
-              Penn Wharton China Summit. These leaders
-              talked about the opportunities in global
-              strategic integration and the challenges
-              brought by the supply-side reform with
-              respect to the seven major sections topics/
-              themes of real estate, healthcare, financial
-              markets, culture and the arts, business reform,
-              science and technology, and education.</p>
+          <p>如今，中国二字无疑是所有国际论坛上反复提及、不容小视的主角 。这个拥有巨大经济总量、运转市场、和资金储备的国家，其兴盛源于近几十年来的经济变革。</p>
+          <p>可是，伴随着近期经济发展的平缓走向、传统行业的周期性衰退、以及经济结构的调整，国内外的企业家和经济学家不禁试想，中国将如何破解高速发展后的经济增长瓶颈。应对全球变化多端的样貌，中国是否可以完善全球化战略整合，并化解供给侧改革带来的挑战？
+          </p>
+          <p>2017年的峰会旨于搭建全美影响力最大的海外菁英交流平台，邀请中美各界领袖解读中国企业的发展前景，一同探讨中国和世界磨合轨道中存在的契合与机遇 。
+          </p>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-12 col-sm-12 col-xs-12">
-          <h1 id="whycome">PAST SPEAKERS</h1>
+          <h1 id="whycome">往届嘉宾</h1>
         </div>
       </div>
     </div>
@@ -280,7 +266,7 @@
             <div class="summit-year">PWCS 2017</div>
           </div>
           <div class="row row-eq-height">
-            <div class="col-4 speaker-name">Qiyue Zhang</div>
+            <div class="col-4 speaker-name">章启月</div>
             <div class="col-8 speaker-title"> Consulate General of China in New York<br/></div>
             <div class="col-4 speaker-name">Shiyi Pan</div>
             <div class="col-8 speaker-title"> Chairman of Soho China</div>
@@ -343,53 +329,53 @@
             <div class="summit-year">PWCS 2016</div>
           </div>
           <div class="row">
-            <div class="col-4 speaker-name">Jun Lei</div>
-            <div class="col-8 speaker-title">Founder of Xiaomi technology</div>
-            <div class="col-4 speaker-name">Jixing Zhang</div>
-            <div class="col-8 speaker-title">General manager of Sinopec USA</div>
-            <div class="col-4 speaker-name">Qiang Tan</div>
-            <div class="col-8 speaker-title">CEO of MetLife China</div>
-            <div class="col-4 speaker-name">Xin Zhou</div>
-            <div class="col-8 speaker-title">Chairman of Ehouse Holdings</div>
-            <div class="col-4 speaker-name">Jun Pan</div>
-            <div class="col-8 speaker-title">Chairman and CEO of Fantasia Holdings</div>
-            <div class="col-4 speaker-name">Zhonghua Lin</div>
-            <div class="col-8 speaker-title">Founder of Ruifeng fund</div>
-            <div class="col-4 speaker-name">Changfeng Ding</div>
-            <div class="col-8 speaker-title">Director of Vanke commercial real estate</div>
-            <div class="col-4 speaker-name">Jianda Ni</div>
-            <div class="col-8 speaker-title">Chairman of Jupai investment group</div>
-            <div class="col-4 speaker-name">David Yi Li</div>
-            <div class="col-8 speaker-title">Chairman and CEO of JP Morgan China</div>
-            <div class="col-4 speaker-name">Kaige Chen</div>
-            <div class="col-8 speaker-title">Renowned Chinese Film Director</div>
+            <div class="col-4 speaker-name">雷军</div>
+            <div class="col-8 speaker-title">小米创始人</div>
+            <div class="col-4 speaker-name">张吉星</div>
+            <div class="col-8 speaker-title">中国石化美国公司总经理，中国石化美国总代表</div>
+            <div class="col-4 speaker-name">谭强</div>
+            <div class="col-8 speaker-title">美国MetLife大都会集团大中华区CEO</div>
+            <div class="col-4 speaker-name">周忻</div>
+            <div class="col-8 speaker-title">易居(中国)控股有限公司董事局主席</div>
+            <div class="col-4 speaker-name">潘军</div>
+            <div class="col-8 speaker-title">花样年控股集团有限公司董事局主席兼首席执行官</div>
+            <div class="col-4 speaker-name">林中华</div>
+            <div class="col-8 speaker-title">峰瑞资本创始合伙人</div>
+            <div class="col-4 speaker-name">丁长峰</div>
+            <div class="col-8 speaker-title">万科集团高级副总裁、万科集团商业地产负责人</div>
+            <div class="col-4 speaker-name">倪建达</div>
+            <div class="col-8 speaker-title">钜派投资集团联席董事长兼 CEO</div>
+            <div class="col-4 speaker-name">李一</div>
+            <div class="col-8 speaker-title">摩根大通中国区主席兼首席执行官</div>
+            <div class="col-4 speaker-name">陈凯歌</div>
+            <div class="col-8 speaker-title">著名导演</div>
             <div class="col-4 speaker-name">Kennedy Xu</div>
             <div class="col-8 speaker-title">Renowned writer and screenrighter</div>
-            <div class="col-4 speaker-name">Sanping Han</div>
-            <div class="col-8 speaker-title">Former Chairman of China Film Group</div>
+            <div class="col-4 speaker-name">韩三平</div>
+            <div class="col-8 speaker-title">前中国电影集团公司董事长兼总经理</div>
             <div class="col-4 speaker-name">Max Michael</div>
-            <div class="col-8 speaker-title">Asia Business Director of United Talent</div>
-            <div class="col-4 speaker-name">Yanling Wang</div>
-            <div class="col-8 speaker-title">CEO of 798 Art Zone</div>
-            <div class="col-4 speaker-name">Han Lin</div>
-            <div class="col-8 speaker-title">Founder of M Woods Art Gallery</div>
+            <div class="col-8 speaker-title">美国United Talent Agency 亚洲商务开发总负责人</div>
+            <div class="col-4 speaker-name">王彦伶</div>
+            <div class="col-8 speaker-title">北京 798 文化创意产业园创始人</div>
+            <div class="col-4 speaker-name">林瀚</div>
+            <div class="col-8 speaker-title">M WOODS 美术馆创始人</div>
             <div class="col-4 speaker-name">Hang Chen</div>
             <div class="col-8 speaker-title">President of China Cultural Industry Investment Fund Management co.</div>
-            <div class="col-4 speaker-name">Man Chen</div>
-            <div class="col-8 speaker-title">Renowned photographer</div>
-            <div class="col-4 speaker-name">Gong Dong</div>
-            <div class="col-8 speaker-title">Celebrated Chinese architect</div>
-            <div class="col-4 speaker-name">Ke Wei</div>
-            <div class="col-8 speaker-title">Chief operating officer of 36 KR</div>
-            <div class="col-4 speaker-name">Dong Duan</div>
-            <div class="col-8 speaker-title">Vice President of 58 City</div>
-            <div class="col-4 speaker-name">Xiaobo Cui</div>
-            <div class="col-8 speaker-title">Founder and CEO of TalkingData</div>
-            <div class="col-4 speaker-name">Jie Tang</div>
-            <div class="col-8 speaker-title">General Representative of Suning USA</div>
+            <div class="col-4 speaker-name">陈漫</div>
+            <div class="col-8 speaker-title">国际时尚摄影师, 视觉艺术家</div>
+            <div class="col-4 speaker-name">董功</div>
+            <div class="col-8 speaker-title">著名建筑师、直向建筑创始人</div>
+            <div class="col-4 speaker-name">魏珂</div>
+            <div class="col-8 speaker-title">36氪首席运营官</div>
+            <div class="col-4 speaker-name">段冬</div>
+            <div class="col-8 speaker-title">58赶集集团高级副总裁</div>
+            <div class="col-4 speaker-name">崔晓波</div>
+            <div class="col-8 speaker-title">TalkingData（腾云天下）创始人&CEO</div>
+            <div class="col-4 speaker-name">唐杰</div>
+            <div class="col-8 speaker-title">苏宁美国硅谷研究院总经理</div>
             <div class="col-4 speaker-name">Jay Coen Gilbert</div>
-            <div class="col-8 speaker-title">Founder and CEO of Grade B Corporate Rating</div>
-            <div class="col-4 speaker-name">Jing Han</div>
+            <div class="col-8 speaker-title">B Lab 创始人，美国著名企业家、投资人</div>
+            <div class="col-4 speaker-name">韩靖</div>
             <div class="col-8 speaker-title">Deputy secretary general of the China Social Entrepreneur Foundation</div>
             <div class="col-4 speaker-name">Fei Deng</div>
             <div class="col-8 speaker-title">Editor in Chief of Phoenix Weekly and sponsor of Free Lunch for Children</div>
@@ -409,11 +395,13 @@
         <div class="col-lg-5 col-sm-12 col-xs-12">
           <h1 class="year-title">2016</h1>
           <h1 class="slogan-title">
-            <span>China's New Normal: </span><br/>The Next Engine of Growth<br>
+            <span>中国的“新常态”: </span><br/>新增长动力<br>
         </div>
         <div class="col-lg-7 col-sm-12 hidden-xs year-desc">
-          <p>After decades of high-speed growth, China's economy is running out of steam. Traditional drivers including export, infrastructure investment and real estate are losing their momentum. In response, the Chinese Central Bank has slashed interest rates, but the effect is limited by the not-quite-liberalized nature of China’s financial system. The Government is additionally wary of fiscal stimulus because local government debt has grown to dangerous levels. In other words, the old period of high speed growth is over, and China's economy is entering a ‘New Normal’. </p>
-          <p>Going forward, everyone, from government officials to businessmen, academics to investors, is looking for the next driver of growth. Is it innovation and entrepreneurship in tech sector, or a booming entertainment and media industry? Will it be the liberalization in the financial system, or reform in state-owned Enterprises? </p>
+          <p>经过几十年的高速增长，中国经济正在失去动力。 包括出口，基础设施投资和房地产在内的传统司机正在失去势头。 对此，中国央行削减了利率，但其影响受到中国金融体系不完全自由化的限制。 由于地方政府债务已经上升到危险水平，政府还对财政刺激措施持谨慎态度。 换句话说，旧时期的高速增长已经结束，中国经济正在进入“新常态”。
+          </p>
+          <p>展望未来，从政府官员到商人，学者到投资者，每个人都在寻找新的增长动力。 它是科技领域的创新和创业，还是蓬勃发展的娱乐和媒体行业？ 这是金融体系的自由化还是国有企业的改革？
+          </p>
         </div>
       </div>
     </div>
